# clean-fasta

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/clean_fasta/: __init__.py  cleaner.py  cli.py  molseq.py
tests/: test_cleaner.py  test_cli.py  test_molseq.py
