[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-fasta"
description = "Clean and filter FASTA sequence files: strip gaps, filter by length and valid-character ratio, and deduplicate ids."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Christian M. Zmasek" }]
keywords = ["bioinformatics", "fasta", "sequences", "genomics", "phylogenetics", "cleaning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/cmzmasek/clean-fasta"
Repository = "https://github.com/cmzmasek/clean-fasta"
Issues = "https://github.com/cmzmasek/clean-fasta/issues"

[project.scripts]
clean-fasta = "clean_fasta.cli:run"

[tool.setuptools.dynamic]
version = { attr = "clean_fasta.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clean_fasta = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
